# loomkin

./: .gitignore  .localias  .loomkin.toml.example  .mise.toml  AGENTS.md  Brewfile  CONTRIBUTING.md  Makefile  README.md  commitlint.config.mjs  lefthook.yml  mix.exs  pnpm-lock.yaml  skills-lock.json
.devcontainer/: .env.example
.github/workflows/: autofix.yml  ci-pr.yml  cli.yml  commit-lint.yml  mobile-e2e.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
apps/cli/: package.json  skills-lock.json  tsconfig.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: hotkeys.rs  lib.rs  main.rs  notifications.rs  tray.rs  updater.rs
apps/mobile/: app.config.ts  babel.config.js  eas.json  package.json  tailwind.config.js  tsconfig.json
assets/: tailwind.config.js
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  runtime.exs  test.exs
docs/: architecture-federation.md  configuration.md  epic-11-platform-api.md  epic-12-vault-primitive.md  epic-13-conversation-agents.md  epic-14-self-healing-teams.md  epic-15-thread-weaving.md  epic-18-closing-the-loop.md  epic-20-federation-collaboration.md  index.html  jido-claw-adoption-report.md  jido-claw-reasoning-strategies-analysis.md  swarm-control-tools-proposal.md
docs/orchestration/: ARCHITECTURE.md  E2E.md  INTENT_CLASSIFIER.md  KNOWLEDGE.md  (+1 more)
lib/: loomkin_web.ex
loomkin-server/: .gitignore  mix.exs
test/: loomkin_test.exs  test_helper.exs
(+786 files in other folders)
